[package]
name = "discid"
version = "0.4.5"
authors = ["Philipp Wolfer <ph.wolfer@gmail.com>"]
edition = "2018"
description = "Bindings for MusicBrainz libdiscid"
repository = "https://git.sr.ht/~phw/rust-discid"
readme = "README.md"
keywords = ["musicbrainz", "discid", "audio", "bindings"]
categories = ["api-bindings"]
license = "LGPL-3.0-or-later"

[dependencies]
bitflags = "1.3"
discid-sys = "0.4"
