[package]
name = "discid"
version = "0.5.0"
authors = ["Philipp Wolfer <ph.wolfer@gmail.com>"]
edition = "2024"
description = "Bindings for MusicBrainz libdiscid"
repository = "https://git.sr.ht/~phw/rust-discid"
readme = "README.md"
keywords = ["musicbrainz", "discid", "audio", "bindings"]
categories = ["api-bindings"]
license = "LGPL-3.0-or-later"

[dependencies]
bitflags = "2.9"
discid-sys = "0.5"

[patch.crates-io]
discid-sys = { git = "https://github.com/anrouxel/rust-discid-sys.git", rev="0.5.3" }
